--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kelly Hogan portfolio website",
+  "name": "kelly-hogan-portfolio-website",
   "private": true,
   "description": "My portfolio website",
   "version": "1.0.0",
