--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-helmet": "^5.2.0",
+    "react-motion": "^0.5.2",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-noriega": "^0.16.19"
