--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.8.5",
     "react-helmet": "^5.2.0",
     "react-motion": "^0.5.2",
+    "react-scroll": "^1.7.11",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-noriega": "^0.16.19"
