--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.1.18",
+    "gatsby-plugin-scroll-reveal": "0.0.4",
     "gatsby-plugin-sharp": "^2.3.10",
     "gatsby-plugin-typography": "^2.2.10",
     "gatsby-source-filesystem": "^2.1.43",
