--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "version": "1.0.0",
   "author": "Kelly Hogan",
   "dependencies": {
+    "aos": "^2.3.4",
     "gatsby": "^2.18.17",
     "gatsby-image": "^2.0.34",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.1.18",
-    "gatsby-plugin-scroll-reveal": "0.0.4",
     "gatsby-plugin-sharp": "^2.3.10",
     "gatsby-plugin-typography": "^2.2.10",
     "gatsby-source-filesystem": "^2.1.43",
@@ -26,7 +26,8 @@
     "typography-theme-noriega": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "typescript": "^3.7.4"
   },
   "keywords": [
     "gatsby"
